@@ -8,8 +8,8 @@ import lombok.extern.slf4j.Slf4j;
 import org.openapitools.model.ErrorReason;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
+import org.zpi.conferoapi.email.UserEmailRepository;
 import org.zpi.conferoapi.exception.ServiceException;
-import org.zpi.conferoapi.user.User;
 import org.zpi.conferoapi.user.UserRepository;
 import org.zpi.conferoapi.util.CsvReader;
 
@@ -18,17 +18,18 @@ import java.time.Instant;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
 @FieldDefaults(makeFinal = true, level = lombok.AccessLevel.PRIVATE)
 @Slf4j
 public class ConferenceEditionService {
+    private final ConferenceInviteeRepository conferenceInviteeRepository;
 
     ConferenceEditionRepository conferenceEditionRepository;
 
     UserRepository userRepository;
+    private final UserEmailRepository userEmailRepository;
 
     public ConferenceEdition createConferenceEdition(CreateConferenceEdition createConferenceEditionRequest) {
         var activeEdition = conferenceEditionRepository.findActiveEditionConference();
@@ -37,13 +38,14 @@ public class ConferenceEditionService {
             throw new ServiceException(ErrorReason.ACTIVE_CONFERENCE_EDITION_ALREADY_EXISTS);
         }
 
-        List<User> invitees = getInviteesFromInvitationList(createConferenceEditionRequest.getInvitationList());
-
-        return conferenceEditionRepository.save(ConferenceEdition.builder()
+        var newConferenceEdition = conferenceEditionRepository.save(ConferenceEdition.builder()
                 .applicationDeadlineTime(createConferenceEditionRequest.getApplicationDeadlineTime())
                 .createdAt(Instant.now())
-                .invitees(invitees)
                 .build());
+
+        List<ConferenceInvitee> invitees = getInviteesFromInvitationList(newConferenceEdition, createConferenceEditionRequest.getInvitationList());
+        newConferenceEdition.setInvitees(invitees);
+        return newConferenceEdition;
     }
 
     public boolean isConferenceEditionActive() {
@@ -59,14 +61,12 @@ public class ConferenceEditionService {
                 .ifPresent(conferenceEdition::setApplicationDeadlineTime);
 
         updateConferenceEdition.getInvitationList().ifPresent(file -> {
-            List<User> newInvitees = getInviteesFromInvitationList(Optional.of(file));
-            List<User> currentInvitees = new ArrayList<>(conferenceEdition.getInvitees());
+            List<ConferenceInvitee> newInvitees = getInviteesFromInvitationList(conferenceEdition, Optional.of(file));
+            List<ConferenceInvitee> currentInvitees = conferenceEdition.getInvitees();
 
-            for (User newUser : newInvitees) {
-                User existingUser = userRepository.findByEmail(newUser.getEmail())
-                        .orElse(userRepository.save(newUser));
-                if (!currentInvitees.contains(existingUser)) {
-                    currentInvitees.add(existingUser);
+            for (ConferenceInvitee newInvitee : newInvitees) {
+                if (!currentInvitees.contains(newInvitee)) {
+                    currentInvitees.add(newInvitee);
                 }
             }
 
@@ -82,22 +82,19 @@ public class ConferenceEditionService {
         return conferenceEditionRepository.findAll();
     }
 
-    private List<User> getInviteesFromInvitationList(Optional<MultipartFile> invitationList) {
+    private List<ConferenceInvitee> getInviteesFromInvitationList(ConferenceEdition edition, Optional<MultipartFile> invitationList) {
         return invitationList.map(file -> {
             try {
                 var emails = CsvReader.readEmailList(file);
                 log.info("Read {} emails from the invitation list", emails.size());
 
                 return emails.stream()
-                        .map(email -> userRepository.findByEmail(email)
-                                .orElseGet(() -> {
-                                    log.info("User with email {} does not exist, creating new user", email);
-                                    return userRepository.save(User.builder()
-                                            .email(email)
-                                            .isAdmin(false)
-                                            .build());
-                                }))
-                        .collect(Collectors.toList());
+                        .map(email ->
+                            conferenceInviteeRepository.findByEditionAndIdEmail(edition, email)
+                                    .orElseGet(() ->
+                                            conferenceInviteeRepository.save(new ConferenceInvitee(edition, email)))
+                        )
+                        .toList();
             } catch (IOException e) {
                 throw new ServiceException(ErrorReason.INVALID_FILE_FORMAT);
             }
